reduced number of featured pets shown Added justify-content to give better spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,17 @@ body {
 #animals {
     flex-wrap: wrap;
     margin-bottom:20px;
+    justify-content: space-around;
 }
+
 
 @media (min-width:768px) {
    .nav-item img {
         max-height: 3em;
+    }
+    .card {
+        margin:10px;
+        border-radius: 10px;
     }
 }
 
