--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
     background-size: cover;
 }
 
+.container {
+    padding: 10px;
+}
+
 body {
     box-sizing: border-box;
 }
@@ -20,7 +24,7 @@ body {
 #animals {
     flex-wrap: wrap;
     margin-bottom:20px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 
@@ -29,7 +33,6 @@ body {
         max-height: 3em;
     }
     .card {
-        margin:10px;
         border-radius: 10px;
     }
 }
