--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,11 @@ body {
 #animals {
     flex-wrap: wrap;
     margin-bottom:20px;
-    justify-content: space-between;
 }
-
+.box {
+    box-shadow: none;
+    color: #4a4a4a;
+}
 
 @media (min-width:768px) {
    .nav-item img {
